Don't apply selection colors when printing. b=90434 r+sr=bzbarsky